--- a/webdav-react/package.json
+++ b/webdav-react/package.json
@@ -11,12 +11,12 @@
   },
   "dependencies": {
     "axios": "^1.8.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^7.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.363.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.3.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -32,6 +32,7 @@
     "globals": "^15.15.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
-    "vite": "^6.2.0"
-  }
+    "vite": "^4.5.2"
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
